# forge-observatory

./: .env.example  .gitignore  CNAME  DROP_NOTES_s3.md  DROP_NOTES_s4b.md  DROP_NOTES_s4c.md  DROP_NOTES_s5.md  DROP_NOTES_s6.md  DROP_NOTES_s6a.md  DROP_NOTES_s7.md  DROP_NOTES_s7b.md  DROP_NOTES_s7c.md  DROP_NOTES_s8.md  Dockerfile  FORGE_perf_pass_RECORD_jul20.txt  FORGE_stage_D_fullstack_LOCKIN.txt  README.md  RUNBOOK.md  bench_predict_mk2.py  bench_results.json  coming-soon.html  docker-compose.yml  docker_probe_mk1.ps1  experiments.html  fb_probe_mk1.ps1  index.html  lag_probe_mk1.ps1  port5001_probe_mk1.ps1  publish_mk1.ps1  publish_mk2.ps1  publish_mk3.ps1  pyproject.toml  robots.txt  site_probe_mk2.ps1  sync_genre_artifacts_mk3.ps1
_shared/: README.md  eda.py  figcache.py  profiler.py  schema.py  splits.py  usage.py  usage_assumptions.yaml
_shared/tests/: test_splits.py
apps/atlas/: README.md
apps/genre/app/: README.md  config.py  server.py
apps/genre/configs/: beardown.yaml  beardown_3sec.yaml  beardown_rrm.yaml  transformer.yaml
apps/genre/data/: README.md  README.txt  glossary.json  leakage.json  manifest.json  splits_report.json
apps/genre/src/: attribution.py  batch_refit.py  bundle.py  data_doctor.py  dataio.py  eval.py  features.py  inspect_sweep.py  leakage_report.py  metrics.py  predict.py  promote_cfg.py  registry.py  reselect.py  rrm.py  sanity_check.py  split_tests_report.py  sweep.py  test_attribution.py  train.py  verify_mk3.py  vote_eval.py
assets/cool_stuff/: forge_gaussian_ignite_v2 (2).html
models/: README.md
(+59 files in other folders)
